{
    "name": "CustomActions",
    "maps": [
        {
            "name": "Main",
            "id": "c848c822-a0a1-4832-91fa-7cc1438e02b7",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "c5db34d4-0f4c-48a1-82d3-8b32a1fb6b9b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpellCast",
                    "type": "PassThrough",
                    "id": "7a8c0abb-d981-4cae-9eac-0850dd9ba6af",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Teleport",
                    "type": "Button",
                    "id": "e2d94675-9c2b-4f97-82c0-c7477d40b227",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8a191a23-46c7-41bc-8bf0-20c4647c4fef",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a3ab926-9f53-4ae9-9905-5f11fc427dbd",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpellCast",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86201343-f18e-4e49-81fd-2915e92c5afc",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Teleport",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}